--- a/pom.xml
+++ b/pom.xml
@@ -131,11 +131,17 @@
             <groupId>org.aspectj</groupId>
         </dependency>
 
-        <!-- Avoid avoid pseudo(?) security vulnerability CVE-2023-35116. -->
+        <!-- Avoid pseudo(?) security vulnerability CVE-2023-35116. -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.16.0</version>
+        </dependency>
+        <!-- Avoid potential security vulnerability CVE-2024-22243. -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>6.1.4</version>
         </dependency>
 
         <dependency>
