--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,12 @@
             <artifactId>spring-web</artifactId>
             <version>6.1.4</version>
         </dependency>
+        <!-- Avoid potential security vulnerabilities CVE-2024-26308 and CVE-2024-25710. -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.26.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
